--- a/Selenium_2/test-output/emailable-report.html
+++ b/Selenium_2/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Failed suite [Failed suite [Test-Suite]]</th></tr>
-<tr><td><a href="#t0">Page Object Model Project(failed)(failed)</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,947</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,062</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Failed suite [Failed suite [Test-Suite]]</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Page Object Model Project(failed)(failed) &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.techbee.selenium.testng.tests.EbaySearchTest</td><td><a href="#m0">init</a></td><td rowspan="1">1691444836352</td><td rowspan="1">12675</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.techbee.selenium.testng.tests.EbaySearchTest</td><td><a href="#m0">init</a></td><td rowspan="1">1691445697648</td><td rowspan="1">11811</td></tr></tbody>
 </table>
-<h2>Page Object Model Project(failed)(failed)</h2><h3 id="m0">com.techbee.selenium.testng.tests.EbaySearchTest#init</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.techbee.selenium.testng.tests.EbaySearchTest#init</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
