--- a/AspirationTest/test-output/old/Default suite/classes.html
+++ b/AspirationTest/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>testProductPrices</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testGettingStarted</td>
 <td>&nbsp;</td></tr>
 <tr>
