--- a/AspirationTest/test-output/old/Failed suite [Default suite]/methods.html
+++ b/AspirationTest/test-output/old/Failed suite [Default suite]/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Failed suite [Default suite]</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="da8dc5">  <td>23/08/11 10:17:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testGettingStarted()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5e7cd6cc]">testGettingStarted</td> 
-  <td>main@1371376476</td>   <td></td> </tr>
-<tr bgcolor="b5dd6c">  <td>23/08/11 10:17:33</td>   <td>-6274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5e7cd6cc]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1371376476</td>   <td></td> </tr>
-<tr bgcolor="b5dd6c">  <td>23/08/11 10:17:41</td>   <td>1633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5e7cd6cc]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1371376476</td>   <td></td> </tr>
+<tr bgcolor="da8dc5">  <td>23/08/11 11:00:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testProductPrices()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@68c9d179]">testProductPrices</td> 
+  <td>main@2068897588</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 11:00:38</td>   <td>-5884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@68c9d179]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@2068897588</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 11:00:46</td>   <td>2020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@68c9d179]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@2068897588</td>   <td></td> </tr>
 </table>
