--- a/AspirationTest/test-output/old/Failed suite [Aspiration Test-Suite]/methods-not-run.html
+++ b/AspirationTest/test-output/old/Failed suite [Aspiration Test-Suite]/methods-not-run.html
@@ -3,4 +3,5 @@
 <tr><td>com.selenium.aspiration.tests.AspirationTest.testSignIn</td></tr>
 <tr><td>com.selenium.aspiration.tests.AspirationTest.testGettingStarted</td></tr>
 <tr><td>com.selenium.aspiration.tests.AspirationTest.testProductPrices</td></tr>
+<tr><td>com.selenium.aspiration.tests.AspirationTest.testIsOptionsChecked</td></tr>
 </table>
