--- a/AspirationTest/test-output/emailable-report.html
+++ b/AspirationTest/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,766</td><td></td><td></td></tr>
+<tr><th colspan="8">Aspiration Test-Suite</th></tr>
+<tr><td><a href="#t0">Page Object Model Project</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,541</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.selenium.aspiration.tests.AspirationTest</td><td><a href="#m0">testProductPrices</a></td><td rowspan="1">1691766299732</td><td rowspan="1">2249</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Aspiration Test-Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Page Object Model Project &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.selenium.aspiration.tests.AspirationTest</td><td><a href="#m0">testGettingStarted</a></td><td rowspan="1">1691785065261</td><td rowspan="1">370</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.selenium.aspiration.tests.AspirationTest#testProductPrices</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Page Object Model Project</h2><h3 id="m0">com.selenium.aspiration.tests.AspirationTest#testGettingStarted</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
