--- a/AspirationTest/test-output/old/Aspiration Test-Suite/classes.html
+++ b/AspirationTest/test-output/old/Aspiration Test-Suite/classes.html
@@ -11,6 +11,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>testProductPrices</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testIsOptionsChecked</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testGettingStarted</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testSignIn</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testViewProducts</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -19,6 +35,10 @@
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>initialize</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
