--- a/AspirationTest/test-output/old/Aspiration Test-Suite/methods-not-run.html
+++ b/AspirationTest/test-output/old/Aspiration Test-Suite/methods-not-run.html
@@ -1,3 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.selenium.aspiration.tests.TestBase.initialize</td></tr>
+<tr><td>com.selenium.aspiration.tests.AspirationTest.testViewProducts</td></tr>
+<tr><td>com.selenium.aspiration.tests.AspirationTest.testSignIn</td></tr>
+<tr><td>com.selenium.aspiration.tests.AspirationTest.testProductPrices</td></tr>
+<tr><td>com.selenium.aspiration.tests.AspirationTest.testIsOptionsChecked</td></tr>
 </table>
