--- a/AspirationTest/test-output/old/Default suite/classes.html
+++ b/AspirationTest/test-output/old/Default suite/classes.html
@@ -15,15 +15,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>testIsOptionsChecked</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testGettingStarted</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSignIn</td>
+<td>testViewProducts</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testViewProducts</td>
+<td>testSignIn</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
