--- a/AspirationTest/test-output/old/Default suite/methods.html
+++ b/AspirationTest/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d4f8f5">  <td>23/08/11 11:04:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@57bc27f5]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1822525972</td>   <td></td> </tr>
-<tr bgcolor="a5b8a8">  <td>23/08/11 11:04:59</td>   <td>6103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testProductPrices()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@57bc27f5]">testProductPrices</td> 
-  <td>main@1822525972</td>   <td></td> </tr>
-<tr bgcolor="d4f8f5">  <td>23/08/11 11:05:01</td>   <td>8355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@57bc27f5]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1822525972</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>23/08/11 13:44:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5fb759d6]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@208043846</td>   <td></td> </tr>
+<tr bgcolor="a5b8a8">  <td>23/08/11 13:44:43</td>   <td>10178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testIsOptionsChecked()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5fb759d6]">testIsOptionsChecked</td> 
+  <td>main@208043846</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>23/08/11 13:44:55</td>   <td>22222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5fb759d6]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@208043846</td>   <td></td> </tr>
 </table>
