--- a/AspirationTest/test-output/old/Failed suite [Default suite]/classes.html
+++ b/AspirationTest/test-output/old/Failed suite [Default suite]/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>testIsOptionsChecked</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testGettingStarted</td>
 <td>&nbsp;</td></tr>
 <tr>
