--- a/AspirationTest/test-output/old/Failed suite [Failed suite [Failed suite [Default suite]]]/methods.html
+++ b/AspirationTest/test-output/old/Failed suite [Failed suite [Failed suite [Default suite]]]/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Failed suite [Failed suite [Failed suite [Default suite]]]</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b5dd6c">  <td>23/08/11 09:59:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5e7cd6cc]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1371376476</td>   <td></td> </tr>
-<tr bgcolor="da8dc5">  <td>23/08/11 09:59:56</td>   <td>-458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testGettingStarted()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5e7cd6cc]">testGettingStarted</td> 
-  <td>main@1371376476</td>   <td></td> </tr>
-<tr bgcolor="b5dd6c">  <td>23/08/11 09:59:50</td>   <td>-6844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5e7cd6cc]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1371376476</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:04:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@d554c5f]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@457247584</td>   <td></td> </tr>
+<tr bgcolor="da8dc5">  <td>23/08/11 16:05:03</td>   <td>6327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testIsOptionsChecked()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@d554c5f]">testIsOptionsChecked</td> 
+  <td>main@457247584</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:05:35</td>   <td>38709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@d554c5f]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@457247584</td>   <td></td> </tr>
 </table>
