--- a/AspirationTest/test-output/index.html
+++ b/AspirationTest/test-output/index.html
@@ -193,7 +193,7 @@
 &lt;suite name=&quot;Aspiration Test-Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Page Object Model Project&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.selenium.aspiration.tests.TestBase&quot;/&gt;
+      &lt;class name=&quot;com.selenium.aspiration.utility.TestBase&quot;/&gt;
       &lt;class name=&quot;com.selenium.aspiration.tests.AspirationTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Page Object Model Project --&gt;
@@ -238,28 +238,28 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testIsOptionsChecked')
 data.setCell(0, 2, 'com.selenium.aspiration.tests.AspirationTest')
-data.setCell(0, 3, 17626);
+data.setCell(0, 3, 17829);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testViewProducts')
 data.setCell(1, 2, 'com.selenium.aspiration.tests.AspirationTest')
-data.setCell(1, 3, 2345);
+data.setCell(1, 3, 3022);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testSignIn')
 data.setCell(2, 2, 'com.selenium.aspiration.tests.AspirationTest')
-data.setCell(2, 3, 2294);
+data.setCell(2, 3, 2838);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testProductPrices')
 data.setCell(3, 2, 'com.selenium.aspiration.tests.AspirationTest')
-data.setCell(3, 3, 1743);
+data.setCell(3, 3, 2424);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'testGettingStarted')
 data.setCell(4, 2, 'com.selenium.aspiration.tests.AspirationTest')
-data.setCell(4, 3, 690);
+data.setCell(4, 3, 492);
 window.suiteTableData['Aspiration_Test_Suite']= { tableData: data, tableDiv: 'times-div-Aspiration_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 26 seconds</span>
               <div id="times-div-Aspiration_Test_Suite">
               </div> <!-- times-div-Aspiration_Test_Suite -->
             </div> <!-- times-div -->
@@ -292,59 +292,59 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testGettingStarted</span>
-                <span class="method-start">8114 ms</span>
+                <span class="method-start">9564 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">8807 ms</span>
+                <span class="method-start">10060 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initialize</span>
-                <span class="method-start">9315 ms</span>
+                <span class="method-start">10406 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testIsOptionsChecked</span>
-                <span class="method-start">14685 ms</span>
+                <span class="method-start">15777 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">32313 ms</span>
+                <span class="method-start">33609 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initialize</span>
-                <span class="method-start">32584 ms</span>
+                <span class="method-start">33913 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testProductPrices</span>
-                <span class="method-start">37267 ms</span>
+                <span class="method-start">38662 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">39011 ms</span>
+                <span class="method-start">41087 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initialize</span>
-                <span class="method-start">39273 ms</span>
+                <span class="method-start">41358 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testSignIn</span>
-                <span class="method-start">43943 ms</span>
+                <span class="method-start">46490 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">46238 ms</span>
+                <span class="method-start">49329 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initialize</span>
-                <span class="method-start">46551 ms</span>
+                <span class="method-start">49581 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testViewProducts</span>
-                <span class="method-start">51119 ms</span>
+                <span class="method-start">54100 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">53464 ms</span>
+                <span class="method-start">57123 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
